fixed swiping issues, can now swipe on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
-@import url('https://fonts.googleapis.com/css?family=Josefin+Sans');
 body {
-  font-family: 'Josefin Sans', cursive;
+  font-family: 'Roboto', cursive;
 }
 
 .App {
@@ -47,12 +46,22 @@ body {
   align-items: center;
 }
 
+.margin-top-0 {
+  margin-top: 0;
+}
+
 .margin-0 {
   margin: 0;
 }
 
 .padding-0 {
   padding: 0;
+}
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* The Close Button */
@@ -69,3 +78,4 @@ body {
   text-decoration: none;
   cursor: pointer;
 }
+
