--- a/src/containers/image/image-info/ImageInfo.css
+++ b/src/containers/image/image-info/ImageInfo.css
@@ -6,3 +6,8 @@
     margin: 10px;
 }
 
+@media only screen and (max-width: 992px) {
+    .mobile-margin {
+        margin-top: 0;
+    }
+}
