--- a/src/containers/image/tag/Tag.css
+++ b/src/containers/image/tag/Tag.css
@@ -2,6 +2,12 @@
     font-family: Helvetica, sans-serif;
     background-color: #202f47;
     color: white;
-    margin-top: 10px;
+    margin-bottom: 10px;
     border-color: #202f47;
+}
+
+.tag:hover {
+    color: #66afe9;
+    border-color: #66afe9;
+    box-shadow: 0 0 8px rgba(255,255, 255, 0.6);
 }
