--- a/src/containers/mobile-sidebar/MobileSidebar.css
+++ b/src/containers/mobile-sidebar/MobileSidebar.css
@@ -40,5 +40,17 @@
 
 .category-item:hover .category-design {
     font-weight: bolder;
-    font-size: 20px;
+    font-size: 17px;
+}
+
+@media only screen and (max-width: 992px) {
+    .category-design {
+        font-size: 11px;
+    }
+
+    .category-item:hover .category-design {
+        font-weight: bolder;
+        font-size: 12px;
+    }
+
 }
